--- a/style.css
+++ b/style.css
@@ -1,3 +1,62 @@
+.animated-word {
+  font-size: 50px;
+  text-align: center;
+  color: rgb(161, 8, 98);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: zoomFade 2s ease-in-out forwards;
+  opacity: 0;
+  white-space: nowrap;
+  text-shadow: 0 0 10px violet, 0 0 20px rgb(72, 10, 131);
+}
+
+@keyframes zoomFade {
+  0% {
+    transform: translate(-50%, -50%) scale(0.5);
+    opacity: 0;
+  }
+  50% {
+    transform: translate(-50%, -50%) scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 0;
+  }
+}
+
+/* NUEVO BLOQUE para la frase completa final */
+.animated-final {
+  font-size: 50px;
+  text-align: center;
+  color: rgb(161, 8, 98);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: zoomStay 2s ease-in-out forwards;
+  opacity: 0;
+  white-space: nowrap;
+  text-shadow: 0 0 10px violet, 0 0 20px rgb(72, 10, 131);
+}
+
+@keyframes zoomStay {
+  0% {
+    transform: translate(-50%, -50%) scale(0.5);
+    opacity: 0;
+  }
+  50% {
+    transform: translate(-50%, -50%) scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+}
+
 /*###########################################################################################################*/
 
 html, body {
@@ -39,7 +98,6 @@ body {
     0 0 8px violet;
   animation: pulseNeon 5s infinite ease-in-out;
 }
-  
 
 @keyframes pulseNeon {
   0% {
@@ -64,16 +122,15 @@ body {
   }
 }
 
-/*####################################################################### EMOGIS */
+/*####################################################################### EMOJIS */
 @keyframes fall {
   0% { top: -10%; opacity: 1; }
   100% { top: 110%; opacity: 0; }
 }
 
-/*####################################################################### DIONOAMO */
-
+/*####################################################################### DINOAMO */
 .te-dinoamo {
-  color: #00ccff; /* Azul brillante */
+  color: #00ccff;
   font-weight: bold;
   font-family: 'Verdana', sans-serif;
   text-align: center;
@@ -103,9 +160,8 @@ body {
 }
 
 /*####################################################################### ENCANTAS */
-
 .me-encantas {
-  color: #ff0000; /* Azul brillante */
+  color: #ff0000;
   font-weight: bold;
   font-family: 'Verdana', sans-serif;
   text-align: center;
@@ -135,9 +191,8 @@ body {
 }
 
 /*####################################################################### QUIAMO */
-
 .te-quiamo {
-  color: #ffc400; /* Azul brillante */
+  color: #ffc400;
   font-weight: bold;
   font-family: 'Verdana', sans-serif;
   text-align: center;
